# demand-scout

./: .env  .env.example  README.md  auto_workflow.sh  compare_competitors.py  comparison_report.py  discover_demands.py  github_auto_comment.py  github_find_targets.py  github_monitor_issues.py  github_smart_comment.py  github_track_results.py  init_db.py  pyproject.toml  reddit_posts.db
data/chrome_profile/: Local State
